@@ -392,7 +392,7 @@ bench:
 check: test
 
 test: ./mosh all-tests.scm update
-	./mosh test/io-error.scm
+#	./mosh test/io-error.scm
 	./mosh test/input-output-port.scm
 	./mosh test/input-port.scm
 	./mosh test/output-port.scm
