@@ -1,5 +1,7 @@
 2009-03-16  higepon  <higepon@users.sourceforge.jp>
 
+        * PortProcedures.cpp : bytevector->string checks the BOM things.
+
         * TranscodedTextualInputOutputPort.h : Moved eol-style implmentation from here to Transcoder.cpp.
 
         * tools/psyntax-r6rs/rev10_to_10/Makefile : MOSH_GENSYM_START=5000.
